--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <div class="embed-container">
         <div class="link-box" onclick="location.href='subpage1.html'">재미있는 사이트로 이동해보기</div>
-        <iframe src="https://kimcocopang.github.io/d/subpage1.html" title="임베드 페이지"></iframe>
+        <iframe src="오보의발생원인_한국언론진흥재단 - 시트1.csv" title="임베드 페이지"></iframe>
     </div>
 </body>
 </html>
