--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="embed-container">
-        <div class="link-box" onclick="location.href='오보의발생원인_한국언론진흥재단 - 시트1.csv'">오보의 발생원인</div>
+        <div class="link-box" onclick="location.href='CSV.html'">오보의 발생원인</div>
     </div>
 </body>
 </html>
