--- a/CSV.html
+++ b/CSV.html
@@ -40,7 +40,7 @@
 
 <script>
     // CSV 파일의 URL
-    const csvUrl = "https://github.com/KIMCOCOPANG/d/blob/305b4ca6d267bd33db29f9babcd9cee56a860c02/%EC%98%A4%EB%B3%B4%EC%9D%98%EB%B0%9C%EC%83%9D%EC%9B%90%EC%9D%B8_%ED%95%9C%EA%B5%AD%EC%96%B8%EB%A1%A0%EC%A7%84%ED%9D%A5%EC%9E%AC%EB%8B%A8%20-%20%EC%8B%9C%ED%8A%B81.csv";
+    const csvUrl = "https://raw.githubusercontent.com/KIMCOCOPANG/d/main/%EC%98%A4%EB%B3%B4%EC%9D%98%EB%B0%9C%EC%83%9D%EC%9B%90%EC%9D%B8_%ED%95%9C%EA%B5%AD%EC%96%B8%EB%A1%A0%EC%A7%84%ED%9D%A5%EC%9E%AC%EB%8B%A8%20-%20%EC%8B%9C%ED%8A%B81.csv";
 
     // CSV 파일을 가져와서 테이블에 표시하는 함수
     async function loadCsvToTable() {
