--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트</title>
+    <title>바로잡습니다</title>
     <style>
         body {
             display: flex;
@@ -14,6 +14,10 @@
             background-color: #f0f0f0;
         }
 
+        .embed-container {
+            width: 1280px;
+            height: 720px;
+        }
 
         .link-box {
             position: absolute;
@@ -33,7 +37,8 @@
 </head>
 <body>
     <div class="embed-container">
-        <div class="link-box" onclick="location.href='CSV.html'">오보의 발생원인</div>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcN5u9fRJDN5t3gyCzz4Af7L_xwbm3DSp_WCYfLbk2yCwq9H0L-jHwKwxx5RLTQWlt1mKxlXmODxvJ/pubhtml?widget=true&amp;headers=false" width="1280" height="720"></iframe>
     </div>
+    <div class="link-box" onclick="location.href='CSV.html'">오보의 발생원인</div>
 </body>
 </html>
