--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="embed-container">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQcN5u9fRJDN5t3gyCzz4Af7L_xwbm3DSp_WCYfLbk2yCwq9H0L-jHwKwxx5RLTQWlt1mKxlXmODxvJ/pubhtml?widget=true&amp;headers=false" width="1280" height="720"></iframe>
+        <iframe src="https://docs.google.com/spreadsheets/d/1U89w8yd8MImh-X3rDlVzsL0T7sr4ITE9D-ouNfITroI/edit#gid=0" width="1280" height="720"></iframe>
     </div>
     <div class="link-box" onclick="location.href='CSV.html'">오보의 발생원인</div>
 </body>
