--- a/test1.html
+++ b/test1.html
@@ -77,8 +77,8 @@
 
     <!-- [중앙 이미지 그리드] -->
     <div class="image-grid">
-        <img src="path_to_image1.jpg" alt="Image 1">
-        <img src="path_to_image2.jpg" alt="Image 2">
+        <img src="코코 이미지/coco1.jpg" alt="Image 1">
+        <img src="코코 이미지/coco2.jpg" alt="Image 2">
         <img src="path_to_image3.jpg" alt="Image 3">
         <img src="path_to_image4.jpg" alt="Image 4">
         <img src="path_to_image5.jpg" alt="Image 5">
