--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 페이지</title>
+    <title>테스트 페이지1</title>
     <style>
         /* [웹 페이지 배경] */
         body {
@@ -79,20 +79,20 @@
     <div class="image-grid">
         <img src="코코 이미지/coco1.jpg" alt="Image 1">
         <img src="코코 이미지/coco2.jpg" alt="Image 2">
-        <img src="path_to_image3.jpg" alt="Image 3">
-        <img src="path_to_image4.jpg" alt="Image 4">
-        <img src="path_to_image5.jpg" alt="Image 5">
-        <img src="path_to_image6.jpg" alt="Image 6">
-        <img src="path_to_image7.jpg" alt="Image 7">
-        <img src="path_to_image8.jpg" alt="Image 8">
-        <img src="path_to_image9.jpg" alt="Image 9">
-        <img src="path_to_image10.jpg" alt="Image 10">
-        <img src="path_to_image11.jpg" alt="Image 11">
-        <img src="path_to_image12.jpg" alt="Image 12">
-        <img src="path_to_image13.jpg" alt="Image 13">
-        <img src="path_to_image14.jpg" alt="Image 14">
-        <img src="path_to_image15.jpg" alt="Image 15">
-        <img src="path_to_image16.jpg" alt="Image 16">
+        <img src="코코 이미지/coco3.jpg" alt="Image 3">
+        <img src="코코 이미지/coco4.jpg" alt="Image 4">
+        <img src="코코 이미지/coco5.jpg" alt="Image 5">
+        <img src="코코 이미지/coco6.jpg" alt="Image 6">
+        <img src="코코 이미지/coco7.jpg" alt="Image 7">
+        <img src="코코 이미지/coco8.jpg" alt="Image 8">
+        <img src="코코 이미지/coco9.jpg" alt="Image 9">
+        <img src="코코 이미지/coco10.jpg" alt="Image 10">
+        <img src="코코 이미지/coco11.jpg" alt="Image 11">
+        <img src="코코 이미지/coco12.jpg" alt="Image 12">
+        <img src="코코 이미지/coco13.jpg" alt="Image 13">
+        <img src="코코 이미지/coco14.jpg" alt="Image 14">
+        <img src="코코 이미지/coco15.jpg" alt="Image 15">
+        <img src="코코 이미지/coco16.jpg" alt="Image 16">
     </div>
 </body>
 </html>
