--- a/test1.html
+++ b/test1.html
@@ -61,6 +61,21 @@
         .image-grid img {
             width: 100px;
             height: 100px;
+            border: 1.5pt solid blue;
+            transition: transform 0.5s;
+        }
+
+        .image-grid img:hover {
+            animation: rotate 2s linear infinite;
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
