--- a/test1.html
+++ b/test1.html
@@ -10,7 +10,7 @@
             margin: 0;
             background: linear-gradient(to bottom right, #f0f0f0, #a0a0a0);
             background-size: cover;
-            background-image: url('path_to_background_image.jpg'); /* 배경 이미지 경로 입력 */
+            background-image: url('코코 이미지 /Background.png'); /* 배경 이미지 경로 입력 */
         }
 
         /* [가운데 상단 텍스트] */
