--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트 페이지1</title>
+    <title>김코코의 세상</title>
     <style>
         /* [웹 페이지 배경] */
         body {
@@ -82,12 +82,12 @@
 <body>
     <!-- [가운데 상단 텍스트] -->
     <div class="center-top-text">
-        바로잡습니다
+        김코코의 세상
     </div>
 
     <!-- [우측 상단 텍스트] -->
     <div class="top-right-text">
-        <a href="https://www.instagram.com/nanjubie?igsh=MTNhM29nOHQzMnN5cQ==" target="_blank">주인 : 이주희</a>
+        <a href="https://www.instagram.com/kwang_9904/" target="_blank">주인 : 김광현</a>
     </div>
 
     <!-- [중앙 이미지 그리드] -->
