--- a/cocoworld.html
+++ b/cocoworld.html
@@ -121,13 +121,13 @@
         <div class="image-container">
             <a href="http://example.com/page1" target="_blank">
                 <img src="코코 이미지/coco1.jpg" alt="Image 1">
-                <div class="overlay">1</div>
+                <div class="overlay">코코의 취미</div>
             </a>
         </div>
         <div class="image-container">
             <a href="http://example.com/page2" target="_blank">
                 <img src="코코 이미지/coco2.jpg" alt="Image 2">
-                <div class="overlay">2</div>
+                <div class="overlay">코코의 최애 음식</div>
             </a>
         </div>
         <div class="image-container">
