--- a/cocoworld.html
+++ b/cocoworld.html
@@ -125,7 +125,7 @@
             </a>
         </div>
         <div class="image-container">
-            <a href="http://example.com/page2" target="_blank">
+            <a href="https://images.pet-friends.co.kr/storage/pet_friends/product/id/e/4/6/d/f/e/1/e46dfe1bafa3431ebd95c7c6d2a26d4e/10001/72f426a6324224481768090e261148f7.jpeg" target="_blank">
                 <img src="코코 이미지/coco2.jpg" alt="Image 2">
                 <div class="overlay">코코의 최애 음식</div>
             </a>
