--- a/cocoworld.html
+++ b/cocoworld.html
@@ -11,6 +11,7 @@
             background: linear-gradient(to bottom right, #f0f0f0, #a0a0a0);
             background-size: cover;
             background-image: url('Background.png'); /* 배경 이미지 경로 입력 */
+            display: flex;
         }
 
         /* [가운데 상단 텍스트] */
@@ -45,17 +46,41 @@
             text-decoration: none;
         }
 
+        /* [메뉴 카테고리] */
+        .menu-category {
+            position: fixed;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .menu-category a {
+            color: pink;
+            font-size: 13pt;
+            font-weight: bold;
+            text-decoration: underline;
+            transform: rotate(-45deg);
+            margin-bottom: 20px;
+            cursor: pointer;
+        }
+
         /* [중앙 이미지 그리드] */
+        .content {
+            margin-left: 150px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
         .image-grid {
             display: grid;
             grid-template-columns: repeat(4, 100px);
             grid-gap: 10px;
             justify-content: center;
             align-content: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
         }
 
         .image-grid .image-container {
@@ -103,7 +128,28 @@
                 transform: rotate(360deg);
             }
         }
+
+        .video-container {
+            display: none;
+            text-align: center;
+        }
+
+        .video-container iframe {
+            width: 1280px;
+            height: 720px;
+        }
     </style>
+    <script>
+        function showImages() {
+            document.querySelector('.image-grid').style.display = 'grid';
+            document.querySelector('.video-container').style.display = 'none';
+        }
+
+        function showVideo() {
+            document.querySelector('.image-grid').style.display = 'none';
+            document.querySelector('.video-container').style.display = 'block';
+        }
+    </script>
 </head>
 <body>
     <!-- [가운데 상단 텍스트] -->
@@ -116,103 +162,116 @@
         <a href="https://www.instagram.com/kwang_9904/" target="_blank">주인 : 김광현</a>
     </div>
 
+    <!-- [메뉴 카테고리] -->
+    <div class="menu-category">
+        <a href="javascript:void(0)" onclick="showImages()">코코 사진들</a>
+        <a href="javascript:void(0)" onclick="showVideo()">코코가 좋아하는 영상</a>
+    </div>
+
     <!-- [중앙 이미지 그리드] -->
-    <div class="image-grid">
-        <div class="image-container">
-            <a href="http://example.com/page1" target="_blank">
-                <img src="코코 이미지/coco1.jpg" alt="Image 1">
-                <div class="overlay">코코의 취미</div>
-            </a>
+    <div class="content">
+        <div class="image-grid">
+            <div class="image-container">
+                <a href="http://example.com/page1" target="_blank">
+                    <img src="코코 이미지/coco1.jpg" alt="Image 1">
+                    <div class="overlay">1</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page2" target="_blank">
+                    <img src="코코 이미지/coco2.jpg" alt="Image 2">
+                    <div class="overlay">2</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page3" target="_blank">
+                    <img src="코코 이미지/coco3.jpg" alt="Image 3">
+                    <div class="overlay">3</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page4" target="_blank">
+                    <img src="코코 이미지/coco4.jpg" alt="Image 4">
+                    <div class="overlay">4</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page5" target="_blank">
+                    <img src="코코 이미지/coco5.jpg" alt="Image 5">
+                    <div class="overlay">5</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page6" target="_blank">
+                    <img src="코코 이미지/coco6.jpg" alt="Image 6">
+                    <div class="overlay">6</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page7" target="_blank">
+                    <img src="코코 이미지/coco7.jpg" alt="Image 7">
+                    <div class="overlay">7</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page8" target="_blank">
+                    <img src="코코 이미지/coco8.jpg" alt="Image 8">
+                    <div class="overlay">8</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page9" target="_blank">
+                    <img src="코코 이미지/coco9.jpg" alt="Image 9">
+                    <div class="overlay">9</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page10" target="_blank">
+                    <img src="코코 이미지/coco10.jpg" alt="Image 10">
+                    <div class="overlay">10</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page11" target="_blank">
+                    <img src="코코 이미지/coco11.jpg" alt="Image 11">
+                    <div class="overlay">11</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page12" target="_blank">
+                    <img src="코코 이미지/coco12.jpg" alt="Image 12">
+                    <div class="overlay">12</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page13" target="_blank">
+                    <img src="코코 이미지/coco13.jpg" alt="Image 13">
+                    <div class="overlay">13</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page14" target="_blank">
+                    <img src="코코 이미지/coco14.jpg" alt="Image 14">
+                    <div class="overlay">14</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page15" target="_blank">
+                    <img src="코코 이미지/coco15.jpg" alt="Image 15">
+                    <div class="overlay">15</div>
+                </a>
+            </div>
+            <div class="image-container">
+                <a href="http://example.com/page16" target="_blank">
+                    <img src="코코 이미지/coco16.jpg" alt="Image 16">
+                    <div class="overlay">16</div>
+                </a>
+            </div>
         </div>
-        <div class="image-container">
-            <a href="https://m.pet-friends.co.kr/product/detail/197978?noPrevPage=true" target="_blank">
-                <img src="코코 이미지/coco2.jpg" alt="Image 2">
-                <div class="overlay">코코의 최애 음식</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page3" target="_blank">
-                <img src="코코 이미지/coco3.jpg" alt="Image 3">
-                <div class="overlay">3</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page4" target="_blank">
-                <img src="코코 이미지/coco4.jpg" alt="Image 4">
-                <div class="overlay">4</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page5" target="_blank">
-                <img src="코코 이미지/coco5.jpg" alt="Image 5">
-                <div class="overlay">5</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page6" target="_blank">
-                <img src="코코 이미지/coco6.jpg" alt="Image 6">
-                <div class="overlay">6</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page7" target="_blank">
-                <img src="코코 이미지/coco7.jpg" alt="Image 7">
-                <div class="overlay">7</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page8" target="_blank">
-                <img src="코코 이미지/coco8.jpg" alt="Image 8">
-                <div class="overlay">8</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page9" target="_blank">
-                <img src="코코 이미지/coco9.jpg" alt="Image 9">
-                <div class="overlay">9</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page10" target="_blank">
-                <img src="코코 이미지/coco10.jpg" alt="Image 10">
-                <div class="overlay">10</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page11" target="_blank">
-                <img src="코코 이미지/coco11.jpg" alt="Image 11">
-                <div class="overlay">11</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page12" target="_blank">
-                <img src="코코 이미지/coco12.jpg" alt="Image 12">
-                <div class="overlay">12</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page13" target="_blank">
-                <img src="코코 이미지/coco13.jpg" alt="Image 13">
-                <div class="overlay">13</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page14" target="_blank">
-                <img src="코코 이미지/coco14.jpg" alt="Image 14">
-                <div class="overlay">14</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page15" target="_blank">
-                <img src="코코 이미지/coco15.jpg" alt="Image 15">
-                <div class="overlay">15</div>
-            </a>
-        </div>
-        <div class="image-container">
-            <a href="http://example.com/page16" target="_blank">
-                <img src="코코 이미지/coco16.jpg" alt="Image 16">
-                <div class="overlay">16</div>
-            </a>
+
+        <!-- [유튜브 영상] -->
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/Etz5EkvHYkY?si=C63QLSSnY9VrBw6W" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </body>
