--- a/cocoworld2.html
+++ b/cocoworld2.html
@@ -28,13 +28,13 @@
     </style>
   </head>
   <body>
-    <h1 id="title">DreamCoding Youtube</h1>
+    <h1 id="title">KIMCOCO's World</h1>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         new TypeIt('#title') //
           .pause(1000)
-          .delete(7, { delay: 1000 })
-          .type('Academy')
+          .delete(5, { delay: 1000 })
+          .type('Food')
           .go();
       });
     </script>
@@ -118,17 +118,17 @@
 
         .image-grid {
             display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-gap: 10px;
+            grid-template-columns: repeat(4, 20px);
+            grid-gap: 3px;
             justify-content: center;
             align-content: center;
         }
 
         .image-grid .image-container {
             position: relative;
-            width: 100px;
-            height: 100px;
-            border: 1.5pt solid blue;
+            width: 20px;
+            height: 20px;
+            border: 0.5pt solid blue;
             overflow: hidden;
             transition: transform 0.5s;
         }
