--- a/cocoworld.html
+++ b/cocoworld.html
@@ -12,7 +12,7 @@
             background-size: cover;
             background-image: url('Background.png'); /* 배경 이미지 경로 입력 */
             display: flex;
-            font-family: "궁서", serif; /* 폰트 설정 추가 */
+            font-family: "배달의민족 도현", serif; /* 폰트 설정 추가 */
         }
 
         /* [가운데 상단 텍스트] */
